--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+td, th{
+	border:1px solid #ccc;
+	border-radius:5px;
+	padding:0.5rem;
+}
+tr:nth-child(even){
+	background-color:rgb(242, 242, 242);
+}
+tr:nth-child(odd){
+	background-color:rgba(0, 0, 0, 0);
+}
