--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 td, th{
-	border:1px solid #ccc;
-	border-radius:5px;
-	padding:0.5rem;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 0.5rem;
 }
-tr:nth-child(even){
-	background-color:rgb(242, 242, 242);
+.odd{
+	background-color: #f2f2f2;
 }
-tr:nth-child(odd){
-	background-color:rgba(0, 0, 0, 0);
+.even{
+	background-color: #ffffff;
 }
